--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,11 +1,43 @@
 body{font-family:"微软雅黑"; color:#666;}
-.sense{width:600px; height:600px; margin:50px auto; border-right:none; border-bottom:none; position:relative; box-shadow:1px 3px 5px black;}
-.sense .block{float:left; margin-right:1px; margin-bottom:1px; border-radius:50%; position:relative; z-index:8884;}
-.sense .row,.sense .col{background:#444; position:absolute;}
-.sense .row{width:600px; height:1px;}
-.sense .col{width:1px; height:600px;}
-.white{background: white; box-shadow: 0 3px 10px black;}
-.black{background: #333; box-shadow: 0 3px 10px black;}
+.sense{
+    width:600px;
+    height:600px;
+    margin:50px auto;
+    border-right:none;
+    border-bottom:none;
+    position:relative;
+    box-shadow:-10px 10px 15px black;
+    background:#8d6d45;
+}
+.sense .block{
+    float:left;
+    margin-right:1px;
+    margin-bottom:1px;
+    border-radius:50%;
+    position:relative;
+    z-index:8884;
+}
+.sense .row,.sense .col{
+    background:#4d392b;
+    position:absolute;
+}
+.sense .row{
+    width:600px;
+    height:1px;
+}
+.sense .col{
+    width:1px;
+    height:600px;
+}
+.white{
+    background: #ffffff;
+    /* border:1px solid #2c1d1b; */
+    /* box-shadow: 0 3px 10px black; */
+}
+.black{
+    background: #2c1d1b;
+    /* box-shadow: 0 3px 10px black; */
+}
 
 /*--------------------------------------------------*/
 /* .login-box{width:600px; margin:60px auto; padding:100px; border:1px solid black; box-shadow:2px 4px 6px black; text-align:center;} */
